--- a/tables/tableJPFBuilders1.tex
+++ b/tables/tableJPFBuilders1.tex
@@ -54,7 +54,8 @@ Class & Method & Scope &
 \hline
 
 \end{tabular}%
-\caption{Estados generados JPF utilizando el método driver con todos los métodos de la API vs. solo utilizando los métodos builders.}
+\caption{Tiempo de ejecución y estados explorados por JPF utilizando los
+enfoques API y MGO para construir los drivers.}
 \label{tab:results-jpf2}
  
 \end{table}
